tests/NormalTests/paczka1/small_fuzzy/33017831.err
Error in line 1: ykXlKdKLyZ A96 59,9
Error in line 2: 6WkLg9p A96 44,8
Error in line 8: 6WkLg9p A999 156,95
Error in line 12: ykXlKdKLyZ A450 16,2
